css bleed should be fixed

--- a/web-ui/src/components/template-card/TemplateCard.css
+++ b/web-ui/src/components/template-card/TemplateCard.css
@@ -1,4 +1,4 @@
-.card{
+.feedback-template-card{
     width: 220px;
     height: 190px;
     padding: 15px;
@@ -6,37 +6,37 @@
     font-family: "Roboto", "Helvetica", "Arial", sans-serif;
 
 }
-.card-content{
+.feedback-template-card .card-content{
     margin-left:  auto;
     margin-right:  auto;
 }
 
-.templateName{
+.feedback-template-card .templateName{
 
     font-weight: bold;
     text-align: center;
     margin: auto;
     font-size: 30px;
 }
-.description-and-creator{
+.feedback-template-card .description-and-creator{
     display: flex;
     padding: 0px;
     flex-direction: column;
 }
-.description{
+.feedback-template-card .description{
     text-align: center;
     min-height: 60px;
     max-height: 120px;
     max-width: 200px;
     color: gray;
 }
-.creator-wrapper{
+.feedback-template-card .creator-wrapper{
     display: flex;
     padding-top: 20px;
     margin-left:  auto;
     margin-right:  auto;
 }
-.creator{
+.feedback-template-card .creator{
     font-weight: bold;
     text-align: center;
     margin-left: 2px;
@@ -44,10 +44,10 @@
 
 }
 
-.title {
+.feedback-template-card .title {
     font-size: 14px;
 }
 
-.pos {
+.feedback-template-card .pos {
     margin-bottom: 12px;
 }
